Added some content for other pages
Added some content for other pages

--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--Fonts-->
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Lobster|Satisfy' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Lobster|Open+Sans|Bangers' rel='stylesheet' type='text/css'>
     <!--------->
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -17,19 +16,16 @@
 </head>
 
 <body>
-
     <div class="header">
     </div>
-
-
-    <div class="container">
+    <div class="headerText">
+        <a href="index.html">David Muller</a>
+        <h1>Home</h1>
+    </div>
         <div class="jumbotron">
-            <img src="images/headerImage.jpg" alt="Home" class="img-rounded" width="100%" ; height="150">
+            <center><img src="images/headerImage.jpg" alt="Home" class="img-rounded" width="75%" ; height="150px"></center>
         </div>
-<!--        <div class="headerText">
-            <h1 id="myName"><a href="index.html">David Muller<a></h1>
-            <h1 id="pageName">Home</h1>
-        </div>-->
+    <div class="container">
         <nav class="navbar navbar-inverse">
             <div class="container-fluid">
                 <div>
@@ -97,7 +93,30 @@
             <hr>
             <h3>You found my website! This site contains several small code related activities, visuals, and other works that I have created throughout middle and high school. You can contact me by clicking the "Contact Me" button located below. Please leave feedback on how you liked my site and please provide details.</h3>
         </div>
-
+        <div class="table-responsive">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>#</th>
+                        <th>Firstname</th>
+                        <th>Lastname</th>
+                        <th>Age</th>
+                        <th>City</th>
+                        <th>Country</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>1</td>
+                        <td>Anna</td>
+                        <td>Pitt</td>
+                        <td>35</td>
+                        <td>New York</td>
+                        <td>USA</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
     <div class="footer">
         <p id="emailLink">
