--- a/movie2.html
+++ b/movie2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Political Government | Homepage of David Muller</title>
+    <title>Star Wars | Homepage of David Muller</title>
     <link rel="website icon" href="images/icon.ico">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -20,7 +20,7 @@
     </div>
     <div class="headerText">
         <a href="index.html">David Muller</a>
-        <h1>School Courses</h1>
+        <h1>Movies</h1>
     </div>
         <div class="jumbotron">
             <center><img src="images/headerImage.jpg" alt="Home" class="img-rounded" width="75%" ; height="150px"></center>
@@ -89,21 +89,17 @@
             </div>
         </nav>
         <div class="well">
-            <p>Political Government</p>
+            <p>Star Wars</p>
+            <h4 class "createdBy" style="text-align:center">Created by: George Lucas</h4>
             <hr>
-            <h3>Here is a group presentation that me and group members made while in the class in 12th grade.</h3>
-			<center>
-			<div class="video-container">
-			<iframe  src="https://docs.google.com/presentation/d/1pQrDDHbdubRN8jdCiGbOdDT8REptwKfEEc0Qi1RO5qs/embed?start=false&loop=true&delayms=3000" frameborder="0" width="480px" height="299px" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-			</div>
-			</center>
-            <h3>This is a class essay that asked a question dealing with how much the government should listen to their citizens when making different decisions.</p>
-			<center>
-			<div class="video-container">
-			<iframe src="https://docs.google.com/document/d/16Jixty55gEKDcVyIz97qnY3m-KjDF5KyKzeyaWV9j94/pub?embedded=true" frameborder="0" width="850px" height="500px" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true">
-			</div>
-			</center>
-		</div>
+            <h3>" <i>Star Wars is an American epic space opera franchise, centered on a film series created by George Lucas. It depicts the adventures of various characters 'a long time ago in a galaxy far, far away.'<i> "</h3>
+            <center><img src="images/starwars.png" alt="Star Wars" width="626px" height="424px">
+            </center>
+            <p id="source"><i>(Source: wikipedia.org/wiki/Star_Wars)</i>
+            </p>
+            <hr>
+            <h3>More Text</h3>
+        </div>
     </div>
     <div class="footer">
         <p id="emailLink">
@@ -115,6 +111,3 @@
 </body>
 
 </html>
-
-<!--<center>
-			-->
