--- a/school2.html
+++ b/school2.html
@@ -2,11 +2,13 @@
 <html lang="en">
 
 <head>
-    <title>Home | Homepage of David Muller</title>
+    <title>School Courses | Homepage of David Muller</title>
     <link rel="website icon" href="images/icon.ico">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
+    <!--Fonts-->
+	<link href='https://fonts.googleapis.com/css?family=Lobster|Open+Sans|Bangers' rel='stylesheet' type='text/css'>
+    <!--------->
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
@@ -14,15 +16,16 @@
 </head>
 
 <body>
-	
-
-			    <div class="header">
+    <div class="header">
     </div>
-	
-    <div class="container">
+    <div class="headerText">
+        <a href="index.html">David Muller</a>
+        <h1>School Courses</h1>
+    </div>
         <div class="jumbotron">
-            <img src="images/headerImage.jpg" alt="Home"class="img-rounded" width="100%"; height="150">
+            <center><img src="images/headerImage.jpg" alt="Home" class="img-rounded" width="75%" ; height="150px"></center>
         </div>
+    <div class="container">
         <nav class="navbar navbar-inverse">
             <div class="container-fluid">
                 <div>
@@ -75,9 +78,9 @@
                         </li>
                         <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Other Sites<span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a href="artist3.github.io">Emma's Website</a>
+                                <li><a href="artist3.html">Emma's Website</a>
                                 </li>
-                                <li><a href="artist4.github.io">Annie's Website</a>
+                                <li><a href="artist4.html">Annie's Website</a>
                                 </li>
                             </ul>
                         </li>
@@ -86,9 +89,9 @@
             </div>
         </nav>
         <div class="well">
-            <p>About this Website</p>
+            <p>Advanced Computer Programming</p>
             <hr>
-            <h3>You found my website! This site contains several small code related activities, visuals, and other works that I have created throughout middle and high school. You can contact me by clicking the "Contact Me" button located below. Please leave feedback on how you liked my site and please provide details.</p>
+            <h3></h3>
 </div>
     </div>
 
