--- a/tv1.html
+++ b/tv1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Political Government | Homepage of David Muller</title>
+    <title>Rick and Morty | Homepage of David Muller</title>
     <link rel="website icon" href="images/icon.ico">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -20,7 +20,7 @@
     </div>
     <div class="headerText">
         <a href="index.html">David Muller</a>
-        <h1>School Courses</h1>
+        <h1>Television Shows</h1>
     </div>
         <div class="jumbotron">
             <center><img src="images/headerImage.jpg" alt="Home" class="img-rounded" width="75%" ; height="150px"></center>
@@ -89,21 +89,14 @@
             </div>
         </nav>
         <div class="well">
-            <p>Political Government</p>
+            <p>Rick and Morty</p>
+			<h4 class "createdBy" style="text-align:center">Created by: Justin Roiland and Dan Harmon</h4>
             <hr>
-            <h3>Here is a group presentation that me and group members made while in the class in 12th grade.</h3>
-			<center>
-			<div class="video-container">
-			<iframe  src="https://docs.google.com/presentation/d/1pQrDDHbdubRN8jdCiGbOdDT8REptwKfEEc0Qi1RO5qs/embed?start=false&loop=true&delayms=3000" frameborder="0" width="480px" height="299px" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-			</div>
-			</center>
-            <h3>This is a class essay that asked a question dealing with how much the government should listen to their citizens when making different decisions.</p>
-			<center>
-			<div class="video-container">
-			<iframe src="https://docs.google.com/document/d/16Jixty55gEKDcVyIz97qnY3m-KjDF5KyKzeyaWV9j94/pub?embedded=true" frameborder="0" width="850px" height="500px" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true">
-			</div>
-			</center>
-		</div>
+            <h3>"<i>The series follows the misadventures of alcoholic scientist Rick and his easily influenced grandson Morty, who split their time between domestic family life and interdimensional travel. Roiland voices the series' eponymous characters, while the series also stars the voice talent of Chris Parnell, Spencer Grammer, and Sarah Chalke. The series has its origins in an animated parody of Back to the Future created by Roiland for film festival Channel 101. Adult Swim approached Harmon for television show ideas, and he and Roiland developed the program based on the short's two characters.</i>"</h3>
+			<center><img src="images/Rick_and_Morty.jpg" alt="Rick and Morty" class="img-rounded"></center>
+            <hr>
+            <h3>More Text</h3>
+        </div>
     </div>
     <div class="footer">
         <p id="emailLink">
@@ -115,6 +108,3 @@
 </body>
 
 </html>
-
-<!--<center>
-			-->
