--- a/music1.html
+++ b/music1.html
@@ -2,13 +2,12 @@
 <html lang="en">
 
 <head>
-    <title>Music | Homepage of David Muller</title>
+    <title>Daft Punk | Homepage of David Muller</title>
     <link rel="website icon" href="images/icon.ico">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--Fonts-->
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Lobster|Satisfy' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Lobster|Open+Sans|Bangers' rel='stylesheet' type='text/css'>
     <!--------->
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -17,19 +16,16 @@
 </head>
 
 <body>
-<!--        <div class="headerText">
-            <h1 id="myName"><a href="index.html">David Muller<a></h1>
-            <h1 id="pageName">Home</h1>
-        </div>-->
-
     <div class="header">
     </div>
-
-
-    <div class="container">
+    <div class="headerText">
+        <a href="index.html">David Muller</a>
+        <h1>Music</h1>
+    </div>
         <div class="jumbotron">
-            <img src="images/headerImage.jpg" alt="Home" class="img-rounded" width="100%" ; height="150">
+            <center><img src="images/headerImage.jpg" alt="Home" class="img-rounded" width="75%" ; height="150px"></center>
         </div>
+    <div class="container">
         <nav class="navbar navbar-inverse">
             <div class="container-fluid">
                 <div>
@@ -95,11 +91,13 @@
         <div class="well">
             <p>Daft Punk</p>
             <hr>
-			<center><img src="images/dpunk.jpg" alt="Daft Punk" width="626" height="424"></center>
             <h3>"<i>Daft Punk are an electronic music duo consisting of French musicians Guy-Manuel de Homem-Christo and Thomas Bangalter. The duo achieved significant popularity in the late 1990s as part of the French house movement and were met with continued success in the years following, combining elements of house music with funk, techno, disco, rock, and synthpop.<i>"</h3>
-			<p id="source"><i>(Source: wikipedia.org/wiki/Daft_Punk)</i></p>
-			<hr>
-			<h3>Daft Punk is a band that i dont really lkuije</h3>
+            <center><img src="images/dpunk.jpg" alt="Daft Punk" width="626px" height="424px">
+            </center>
+            <p id="source"><i>(Source: wikipedia.org/wiki/Daft_Punk)</i>
+            </p>
+            <hr>
+            <h3>More Text</h3>
         </div>
 
     </div>
