Fixed Last Commit

--- a/school2.html
+++ b/school2.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+	
 </head>
 
 <body>
@@ -91,7 +92,17 @@
         <div class="well">
             <p>Advanced Computer Programming</p>
             <hr>
-            <h3></h3>
+            <h3>For the final I had to create for this course in my sophmore year of high school, we had to write program using any language that we learned that course to illustrate our understanding of that language of our choosing. Since Python was my favorite language at the time (and still is) I decided to use it to make a RPG style text game. In this program, the user is presented with a situation which required them to input a key to respond to the corresponding situation. There are many different endings, but only three styles of ending, the being a good, bad, or decent. Since we had about a month to complete the project, we had time to make our projects rather worthwhile to look at. If you are interested in trying out this program, you can find the code for this program <a href="http://pastebin.com/kJrBkMfC">[here]	</a></h3>
+			<br>
+			<h3>Here are some screenshots of the program running and of the code:	</h3>
+			<center>
+			<div class="pyAdv"> <a href="http://i.imgur.com/RQ8MMxX.jpg?1"><img src="images/pyAdv1.jpg" alt="Python Adventure"></div>
+			<div class="pyAdv"> <a href="http://i.imgur.com/4m154vw.jpg?1"><img src="images/pyAdv2.jpg" alt="Python Adventure"></div>
+			<div class="pyAdv"> <a href="http://i.imgur.com/TyAolHV.jpg?1"><img src="images/pyAdv3.jpg" alt="Python Adventure"></div>
+			<div class="pyAdv"> <a href="http://i.imgur.com/KkDJWSO.jpg?1"><img src="images/pyAdv4.jpg" alt="Python Adventure"></div>
+			</center>
+			
+			
 </div>
     </div>
 
