More content and changed source link for Wiki pages
Content for tv pages and wiki links for music movies and tv

--- a/movie2.html
+++ b/movie2.html
@@ -12,7 +12,7 @@
     <!--------->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <script src="js/jquery-1.11.3.js"></script>
+    <script src="js/jquery-1.11.3.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
 	
 </head>
@@ -97,8 +97,9 @@
             <h3>" <i>Star Wars is an American epic space opera franchise, centered on a film series created by George Lucas. It depicts the adventures of various characters 'a long time ago in a galaxy far, far away.'<i> "</h3>
             <center><img src="images/starwars.png" alt="Star Wars" width="626px" height="424px">
             </center>
-            <p id="source"><i>(Source: wikipedia.org/wiki/Star_Wars)</i>
-            </p>
+			<br>
+            <p id="source"><a href="https://en.wikipedia.org/wiki/Star_Wars"><i>(Source: Wikipedia)</i></a></p>
+			
             <hr>
             <h3>More Text</h3>
         </div>
