--- a/music2.html
+++ b/music2.html
@@ -12,7 +12,7 @@
     <!--------->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <script src="js/jquery-1.11.3.js"></script>
+    <script src="js/jquery-1.11.3.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
 	
 </head>
@@ -94,10 +94,9 @@
             <p>Phoenix</p>
             <hr>
             <h3>"<i>Vocalist Thomas Mars, bassist Deck d'Arcy, and guitarist Chris Mazzalai started playing together as a 'garage band' based out of Mars's house in the suburbs of Paris. In 1995, Laurent Brancowitz, Mazzalai's older brother, permanently joined the band on guitar after the end of Darlin', a short-lived band that Brancowitz had formed with Thomas Bangalter and Guy-Manuel de Homem-Christo (Bangalter and de Homem-Christo later formed Daft Punk)<i>"</h3>
-            <center><img src="images/phoenix.jpg" alt="Daft Punk" width="626px" height="424px">
-            </center>
-            <p id="source"><i>(Source: wikipedia.org/wiki/Phoenix_(band)</i>
-            </p>
+            <center><img src="images/phoenix.jpg" alt="Daft Punk" width="626px" height="424px"></center>
+			<br>
+            <p id="source"><i><a href="https://en.wikipedia.org/wiki/Phoenix_(band)">(Source: Wikipedia)</i></a></p>
             <hr>
             <h3>More Text</h3>
         </div>
