--- a/school1.html
+++ b/school1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Political Government | Homepage of David Muller</title>
+    <title>School Courses | Homepage of David Muller</title>
 	
     <link rel="website icon" href="images/icon.ico">
     <meta charset="utf-8">
@@ -12,7 +12,7 @@
     <!--------->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <script src="js/jquery-1.11.3.js"></script>
+    <script src="js/jquery-1.11.3.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
 	
 </head>
@@ -107,6 +107,7 @@
 			</center>
 		</div>
     </div>
+
     <div class="footer">
         <p id="emailLink">
             <a href="mailto:dmuller116@gmail.com?Subject=Hello%20again" target="_top"> &#8594; Contact Me &#8592; </a>
@@ -117,6 +118,3 @@
 </body>
 
 </html>
-
-<!--<center>
-			-->
