--- a/tv3.html
+++ b/tv3.html
@@ -12,7 +12,7 @@
     <!--------->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <script src="js/jquery-1.11.3.js"></script>
+    <script src="js/jquery-1.11.3.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
 	
 </head>
@@ -91,11 +91,14 @@
             </div>
         </nav>
         <div class="well">
-            <p>Community</p>
-			<h4 class "createdBy" style="text-align:center">Created by: Dan Harmon</h4>
+            <p>Arrested Development</p>
+			<h4 class "createdBy" style="text-align:center">Created by: Mitchell Hurwitz</h4>
             <hr>
-            <h3>"<i>The series follows the misadventures of alcoholic scientist Rick and his easily influenced grandson Morty, who split their time between domestic family life and interdimensional travel. Roiland voices the series' eponymous characters, while the series also stars the voice talent of Chris Parnell, Spencer Grammer, and Sarah Chalke. The series has its origins in an animated parody of Back to the Future created by Roiland for film festival Channel 101. Adult Swim approached Harmon for television show ideas, and he and Roiland developed the program based on the short's two characters.</i>"</h3>
-			<center><img src="images/Rick_and_Morty.jpg" alt="Rick and Morty" class="img-rounded"></center>
+            <h3>"<i>Arrested Development is an American television sitcom created by Mitchell Hurwitz, which originally aired on Fox for three seasons from November 2, 2003 to February 10, 2006. A fourth season of 15 episodes was released on Netflix on May 26, 2013. The show follows the fictitious Bluth family, a formerly wealthy and habitually dysfunctional family. It is presented in a continuous format, incorporating handheld camera work and voice-over narration, as well as occasional archival photos and historical footage. The show also utilizes several long-running "easter egg" jokes throughout each season. Ron Howard serves as an executive producer and the series' uncredited narrator. Set in Newport Beach, California, Arrested Development was filmed primarily in Culver City and Marina del Rey.</i>"</h3>
+			<center><img src="images/Arrested_Development.png" alt="Community" class="img-rounded"></center>
+			<br>
+            <p id="source"><i><a href="https://en.wikipedia.org/wiki/Arrested_Development_(TV_series)">(Source: Wikipedia)</i></a></p>
+            </p>
             <hr>
             <h3>More Text</h3>
         </div>
