--- a/movie1.html
+++ b/movie1.html
@@ -12,7 +12,7 @@
     <!--------->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <script src="js/jquery-1.11.3.js"></script>
+    <script src="js/jquery-1.11.3.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
 	
 </head>
@@ -97,8 +97,8 @@
             <h3>"<i>The Dark Knight is a 2008 superhero film directed, produced, and co-written by Christopher Nolan. Based on the DC Comics character Batman, the film is the second part of Nolan's Batman film series and a sequel to 2005's Batman Begins, starring Christian Bale, Michael Caine, Heath Ledger, Gary Oldman, Aaron Eckhart, Maggie Gylenhaal and Morgan Freeman. With the help of police lieutenant James Gordon (Oldman) and newly elected district attorney Harvey Dent (Eckhart), Batman (Bale) raises the stakes on his war on crime by setting out to dismantle the remaining mafia groups that plague the streets. The partnership proves effective, until the mob draw Batman into combat with a criminal lunatic known as "the Joker" (Ledger), whom he must stop from unleashing a reign of chaos that would plunge Gotham City into anarchy.<i>"</h3>
             <center><img src="images/Dark_Knight.jpg" alt="The Dark Knight" width="626px" height="424px">
             </center>
-            <p id="source"><i>(Source: wikipedia.org/wiki/The_Dark_Knight_(film)</i>
-            </p>
+			<br>
+            <p id="source"><i><a href="https://en.wikipedia.org/wiki/The_Dark_Knight_(film)">(Source: Wikipedia)</i></a></p>
             <hr>
             <h3>More Text</h3>
         </div>
