--- a/music1.html
+++ b/music1.html
@@ -12,7 +12,7 @@
     <!--------->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <script src="js/jquery-1.11.3.js"></script>
+    <script src="js/jquery-1.11.3.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
 	
 </head>
@@ -94,9 +94,9 @@
             <p>Daft Punk</p>
             <hr>
             <h3>"<i>Daft Punk are an electronic music duo consisting of French musicians Guy-Manuel de Homem-Christo and Thomas Bangalter. The duo achieved significant popularity in the late 1990s as part of the French house movement and were met with continued success in the years following, combining elements of house music with funk, techno, disco, rock, and synthpop.<i>"</h3>
-            <center><img src="images/dpunk.jpg" alt="Daft Punk" width="626px" height="424px">
-            </center>
-            <p id="source"><i>(Source: wikipedia.org/wiki/Daft_Punk)</i>
+            <center><img src="images/dpunk.jpg" alt="Daft Punk" width="626px" height="424px"></center>
+			<br>
+            <p id="source"><i><a href="https://en.wikipedia.org/wiki/Daft_Punk">(Source: Wikipedia)</i></a></p>
             </p>
             <hr>
             <h3>More Text</h3>
