--- a/tv1.html
+++ b/tv1.html
@@ -12,7 +12,7 @@
     <!--------->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <script src="js/jquery-1.11.3.js"></script>
+    <script src="js/jquery-1.11.3.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
 	
 </head>
@@ -96,6 +96,8 @@
             <hr>
             <h3>"<i>The series follows the misadventures of alcoholic scientist Rick and his easily influenced grandson Morty, who split their time between domestic family life and interdimensional travel. Roiland voices the series' eponymous characters, while the series also stars the voice talent of Chris Parnell, Spencer Grammer, and Sarah Chalke. The series has its origins in an animated parody of Back to the Future created by Roiland for film festival Channel 101. Adult Swim approached Harmon for television show ideas, and he and Roiland developed the program based on the short's two characters.</i>"</h3>
 			<center><img src="images/Rick_and_Morty.jpg" alt="Rick and Morty" class="img-rounded"></center>
+			<br>
+            <p id="source"><i><a href="https://en.wikipedia.org/wiki/Rick_and_Morty">(Source: Wikipedia)</i></a></p>
             <hr>
             <h3>More Text</h3>
         </div>
