Added Glyph icons and worked on header text
Header Text not complete

--- a/book2.html
+++ b/book2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Community | Homepage of David Muller</title>
+    <title>The City of Ember | Homepage of David Muller</title>
 	
     <link rel="website icon" href="images/icon.ico">
     <meta charset="utf-8">
@@ -23,7 +23,7 @@
     <div class="myName">
         <a href="index.html">David Muller</a>
 		<div class="pageTitle">
-			<h1>Television Shows</h1>
+			<h1>Books</h1>
 		</div>
 	</div>
         <div class="jumbotron">
@@ -93,14 +93,13 @@
             </div>
         </nav>
         <div class="well">
-            <p>Community</p>
-			<h4 class "createdBy" style="text-align:center">Created by: Dan Harmon</h4>
+            <p>The City Of Ember</p>
+			<h4 class "createdBy" style="text-align:center">Author: Jeanne Duprau</h4>
             <hr>
-            <h3>"<i>Community is an American television sitcom created by Dan Harmon that premiered on NBC on September 17, 2009. The single-camera series follows an ensemble cast of characters played by Joel McHale, Gillian Jacobs, Danny Pudi, Yvette Nicole Brown, Alison Brie, Donald Glover, Ken Jeong, Chevy Chase, and Jim Rash, at a community college in the fictional town of Greendale, Colorado. It makes heavy use of meta-humor and pop culture references, often parodying film and television clichés and tropes.</i>"</h3>
-			<center><img src="images/community.jpg" alt="Community" class="img-rounded"></center>
+            <h3>"<i>The City of Ember is a post-apocalyptic science fiction novel by Jeanne DuPrau that was published in 2003. Similar to Suzanne Martel's The City Under Ground published in 1963 and Helen Mary Hoover's This Time of Darkness published in 1980, the story is about Ember, an underground city threatened by aging infrastructure. The young protagonist, Lina Mayfleet, and her friend, Doon Harrow (the second protagonist), follow clues left behind by the original builders of the City of Ember, to safety in the outside world.</i>"</h3>
+			<center><img src="images/The_City_of_Ember.jpg" alt="The City Of Ember" class="img-rounded"></center>
 			<br>
-            <p id="source"><i><a href="https://en.wikipedia.org/wiki/Community_(TV_series)">(Source: Wikipedia)</i></a></p>
-            </p>
+            <p id="source"><i><a href="https://en.wikipedia.org/wiki/The_City_of_Ember">(Source: Wikipedia)</i></a></p>
             <hr>
             <h3>More Text</h3>
         </div>
