--- a/book1.html
+++ b/book1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Community | Homepage of David Muller</title>
+    <title>Fast Food Nation | Homepage of David Muller</title>
 	
     <link rel="website icon" href="images/icon.ico">
     <meta charset="utf-8">
@@ -23,7 +23,7 @@
     <div class="myName">
         <a href="index.html">David Muller</a>
 		<div class="pageTitle">
-			<h1>Television Shows</h1>
+			<h1>Books</h1>
 		</div>
 	</div>
         <div class="jumbotron">
@@ -93,14 +93,13 @@
             </div>
         </nav>
         <div class="well">
-            <p>Community</p>
-			<h4 class "createdBy" style="text-align:center">Created by: Dan Harmon</h4>
+            <p>Fast Food Nation</p>
+			<h4 class "createdBy" style="text-align:center">Author: Eric Schlosser</h4>
             <hr>
-            <h3>"<i>Community is an American television sitcom created by Dan Harmon that premiered on NBC on September 17, 2009. The single-camera series follows an ensemble cast of characters played by Joel McHale, Gillian Jacobs, Danny Pudi, Yvette Nicole Brown, Alison Brie, Donald Glover, Ken Jeong, Chevy Chase, and Jim Rash, at a community college in the fictional town of Greendale, Colorado. It makes heavy use of meta-humor and pop culture references, often parodying film and television clichés and tropes.</i>"</h3>
-			<center><img src="images/community.jpg" alt="Community" class="img-rounded"></center>
+            <h3>"<i>Fast Food Nation: The Dark Side of the All-American Meal (2001) is a book by investigative journalist Eric Schlosser that examines the local and global influence of the United States fast food industry.</i>"</h3>
+			<center><img src="images/Fast_food_nation.jpg" alt="Fast Food Nation" class="img-rounded" width="20" height="20"></center>
 			<br>
-            <p id="source"><i><a href="https://en.wikipedia.org/wiki/Community_(TV_series)">(Source: Wikipedia)</i></a></p>
-            </p>
+            <p id="source"><i><a href="https://en.wikipedia.org/wiki/Fast_Food_Nation">(Source: Wikipedia)</i></a></p>
             <hr>
             <h3>More Text</h3>
         </div>
