--- a/index.html
+++ b/index.html
@@ -3,72 +3,82 @@
 
 <head>
     <title>Home | Homepage of David Muller</title>
-	
+
     <link rel="website icon" href="images/icon.ico">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--Fonts-->
-	<link href='https://fonts.googleapis.com/css?family=Lobster|Open+Sans|Bangers' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Lobster|Open+Sans|Bangers' rel='stylesheet' type='text/css'>
     <!--------->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <script src="js/jquery-1.11.3.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-	
+
 </head>
 
 <body>
     <div class="header">
     </div>
-    <div class="headerText">
+    <!--<div class="myName">
         <a href="index.html">David Muller</a>
+    <div class="pageTitle">
         <h1>Home</h1>
     </div>
-        <div class="jumbotron">
-            <center><img src="images/headerImage.jpg" alt="Home" class="img-rounded" width="75%" ; height="150px"></center>
-        </div>
+    </div>-->
+	<div class="container">
+  <div class="jumbotron" id="header">
+    <p>Bootstrap Tutorial</p> 
+  </div>
+</div>
+    <div class="jumbotron">
+        <center><img src="images/headerImage.jpg" alt="Home" class="img-rounded" width="75%" ; height="150px">
+        </center>
+    </div>
     <div class="container">
         <nav class="navbar navbar-inverse">
             <div class="container-fluid">
                 <div>
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="index.html">Home</a>
+                        <li class="active"><a href="index.html"><span class="glyphicon glyphicon-home"></span> Home </a>
                         </li>
-                        <li class="active"><a href="games.html">Games</a>
+                        <li class="active"><a href="games.html"><span class="glyphicon glyphicon-tasks"></span> Games </a>
                         </li>
-                        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">School Courses <span class="caret"></span></a>
+                        <li class="dropdown">
+                            <a class="dropdown-toggle" data-toggle="dropdown" href="#"> <span class="glyphicon glyphicon-education"></span> School Courses <span class="caret"></span>
+                            </a>
                             <ul class="dropdown-menu">
-                                <li><a href="school1.html">Political Government</a>
+                                <li><a href="school1.html"> Political Government </a>
                                 </li>
-                                <li><a href="school2.html">Advanced Computer Programing</a>
+                                <li><a href="school2.html"> Advanced Computer Programing </a>
                                 </li>
                             </ul>
                         </li>
-                        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="index.html">Music<span class="caret"></span></a>
+                        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="index.html"><span class="glyphicon glyphicon-music"></span> Music <span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a href="music1.html">Daft Punk</a>
+                                <li><a href="music1.html"> Daft Punk </a>
                                 </li>
-                                <li><a href="music2.html">Phoenix</a>
+                                <li><a href="music2.html"> Phoenix </a>
                                 </li>
                             </ul>
                         </li>
-                        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Movies <span class="caret"></span></a>
+                        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="glyphicon glyphicon-facetime-film"></span><span class="glyphicon glyphicon-film"></span> Movie <span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a href="movie1.html">The Dark Knight</a>
+                                <li><a href="movie1.html"> The Dark Knight </a>
                                 </li>
-                                <li><a href="movie2.html">Star Wars</a>
+                                <li><a href="movie2.html"> Star Wars </a>
                                 </li>
                             </ul>
                         </li>
-                        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Books<span class="caret"></span></a>
+                        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="glyphicon glyphicon-tv"></span><span class="glyphicon glyphicon-book"></span> Books <span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a href="book1.html">Fast Food Nation</a>
+                                <li><a href="book1.html"> Fast Food Nation </a>
                                 </li>
-                                <li><a href="book2.html">The City of Ember</a>
+                                <li><a href="book2.html"> The City of Ember </a>
                                 </li>
                             </ul>
                         </li>
-                        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Television Shows<span class="caret"></span></a>
+                        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="glyphicon glyphicon-tv"></span><span class="glyphicon glyphicon-facetime-video"></span> Television Shows <span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li><a href="tv1.html">Rick and Morty</a>
                                 </li>
@@ -78,7 +88,7 @@
                                 </li>
                             </ul>
                         </li>
-                        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Other Sites<span class="caret"></span></a>
+                        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="glyphicon glyphicon-picture"></span> Artist Websites<span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li><a href="artist3.html">Emma's Website</a>
                                 </li>
@@ -122,11 +132,9 @@
     </div>
     <div class="footer">
         <p id="emailLink">
-            <a href="mailto:dmuller116@gmail.com?Subject=Hello%20again" target="_top"> &#8594; Contact Me &#8592; </a>
+            <a href="mailto:dmuller116@gmail.com?Subject=Hello%20again" target="_top"><span class="glyphicon glyphicon-envelope"></span><br>Contact Me</a>
         </p>
     </div>
-    <script src="js/jquery-1.11.3.js"></script>
-    <script src="js/pageLoadAnim.js"></script>
 </body>
 
 </html>
