--- a/school1.html
+++ b/school1.html
@@ -19,56 +19,61 @@
 
 <body>
     <div class="header">
-    </div>
-    <div class="headerText">
+    <div class="myName">
         <a href="index.html">David Muller</a>
-        <h1>School Courses</h1>
+		<div class="pageTitle">
+			<h1>School Courses</h1>
+		</div>
     </div>
-        <div class="jumbotron">
-            <center><img src="images/headerImage.jpg" alt="Home" class="img-rounded" width="75%" ; height="150px"></center>
-        </div>
+    </div>
+    <div class="jumbotron">
+        <center><img src="images/headerImage.jpg" alt="Home" class="img-rounded" width="75%" ; height="150px">
+        </center>
+    </div>
     <div class="container">
         <nav class="navbar navbar-inverse">
             <div class="container-fluid">
                 <div>
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="index.html">Home</a>
+                        <li class="active"><a href="index.html"><span class="glyphicon glyphicon-home"></span> Home </a>
                         </li>
-                        <li class="active"><a href="games.html">Games</a>
+                        <li class="active"><a href="games.html"><span class="glyphicon glyphicon-tasks"></span> Games </a>
                         </li>
-                        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">School Courses <span class="caret"></span></a>
+                        <li class="dropdown">
+                            <a class="dropdown-toggle" data-toggle="dropdown" href="#"> <span class="glyphicon glyphicon-education"></span> School Courses <span class="caret"></span>
+                            </a>
                             <ul class="dropdown-menu">
-                                <li><a href="school1.html">Political Government</a>
+                                <li><a href="school1.html"> Political Government </a>
                                 </li>
-                                <li><a href="school2.html">Advanced Computer Programing</a>
+                                <li><a href="school2.html"> Advanced Computer Programing </a>
                                 </li>
                             </ul>
                         </li>
-                        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="index.html">Music<span class="caret"></span></a>
+                        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="index.html"><span class="glyphicon glyphicon-music"></span> Music <span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a href="music1.html">Daft Punk</a>
+                                <li><a href="music1.html"> Daft Punk </a>
                                 </li>
-                                <li><a href="music2.html">Phoenix</a>
+                                <li><a href="music2.html"> Phoenix </a>
                                 </li>
                             </ul>
                         </li>
-                        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Movies <span class="caret"></span></a>
+                        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="glyphicon glyphicon-facetime-film"></span><span class="glyphicon glyphicon-film"></span> Movie <span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a href="movie1.html">The Dark Knight</a>
+                                <li><a href="movie1.html"> The Dark Knight </a>
                                 </li>
-                                <li><a href="movie2.html">Star Wars</a>
+                                <li><a href="movie2.html"> Star Wars </a>
                                 </li>
                             </ul>
                         </li>
-                        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Books<span class="caret"></span></a>
+                        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="glyphicon glyphicon-tv"></span><span class="glyphicon glyphicon-book"></span> Books <span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a href="book1.html">Fast Food Nation</a>
+                                <li><a href="book1.html"> Fast Food Nation </a>
                                 </li>
-                                <li><a href="book2.html">The City of Ember</a>
+                                <li><a href="book2.html"> The City of Ember </a>
                                 </li>
                             </ul>
                         </li>
-                        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Television Shows<span class="caret"></span></a>
+                        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="glyphicon glyphicon-tv"></span><span class="glyphicon glyphicon-facetime-video"></span> Television Shows <span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li><a href="tv1.html">Rick and Morty</a>
                                 </li>
@@ -78,7 +83,7 @@
                                 </li>
                             </ul>
                         </li>
-                        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Other Sites<span class="caret"></span></a>
+                        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="glyphicon glyphicon-picture"></span> Artist Websites<span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li><a href="artist3.html">Emma's Website</a>
                                 </li>
@@ -102,7 +107,7 @@
             <h3>This is a class essay that asked a question dealing with how much the government should listen to their citizens when making different decisions.</p>
 			<center>
 			<div class="video-container">
-			<iframe src="https://docs.google.com/document/d/16Jixty55gEKDcVyIz97qnY3m-KjDF5KyKzeyaWV9j94/pub?embedded=true" frameborder="0" width="850px" height="500px" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true">
+			<iframe src="https://docs.google.com/document/d/16Jixty55gEKDcVyIz97qnY3m-KjDF5KyKzeyaWV9j94/pub?embedded=true" frameborder="0" width="850px" height="500px" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 			</div>
 			</center>
 		</div>
@@ -110,11 +115,9 @@
 
     <div class="footer">
         <p id="emailLink">
-            <a href="mailto:dmuller116@gmail.com?Subject=Hello%20again" target="_top"> &#8594; Contact Me &#8592; </a>
+            <a href="mailto:dmuller116@gmail.com?Subject=Hello%20again" target="_top"><span class="glyphicon glyphicon-envelope"></span><br>Contact Me</a>
         </p>
     </div>
-    <script src="js/jquery-1.11.3.js"></script>
-    <script src="js/pageLoadAnim.js"></script>
 </body>
 
 </html>
